add external repository

--- a/app/index.html
+++ b/app/index.html
@@ -934,47 +934,35 @@
       </div>
       <div class="grid-100">
         <div class="grid-33 prefix-15">
-
           <a class="new-level__button-left">
             Начать сейчас за
             <span class="new-level__r"> ₽ </span>
             <span class="new-level__99"> 99 </span>
             /мес
           </a>
-
         </div>
         <div class="grid-5">
-          <span>
-
+          <span class="new-level__ili">
             или
           </span>
-
         </div>
-
         <div class="grid-45">
           <a class="new-level__button-centr">
-
             <span>
               Протестировать 7 дней
             </span>
-
             <span class="new-level__is-free">
               БЕСПЛАТНО
             </span>
-
           </a>
         </div>
-
         <a class="new-level__button-right">
-
           <span>
             Протестировать 7 дней
           </span>
-
           <span class="new-level__is-free">
             БЕСПЛАТНО
           </span>
-
         </a>
       </div>
 
@@ -998,8 +986,8 @@
 
             <img class="" src="src/img/support_man_avatar_human.png">
 
-            <span> Круглосуточная поддержка </span>
-          <span> описание этого сервиса в строку </span> 
+            <span class="warranty__information"> Круглосуточная поддержка </span>
+            <span> описание этого сервиса в строку </span>
           </a>
         </div>
         <div class="grid-33">
@@ -1007,7 +995,7 @@
 
             <img class="" src="src/img/Public_signs-money.png">
 
-            <span> Гарантия возврата денег </span>
+            <span class="warranty__information"> Гарантия возврата денег </span>
             <span> в течении 30 дней </span>
           </a>
         </div>
@@ -1016,9 +1004,211 @@
 
             <img class="" src="src/img/shkala.png">
 
-            <span> 99.9 % аптайм </span>
+            <span class="warranty__information"> 99.9 % аптайм </span>
             <span> бесперебойная работа 24/7 </span>
           </a>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="partners">
+    <div class="grid-container">
+      <span class="partners__our">
+        <h4>
+          Наши партнеры
+        </h4>
+      </span>
+      <div class="grid-100">
+        <div class="grid-20">
+          <a> <img class="" src="src/img/cloudlinux-12logo.png"></a>
+        </div>
+        <div class="grid-20">
+          <a> <img class="" src="src/img/php7.png"></a>
+        </div>
+        <div class="grid-20">
+          <a> <img class="" src="src/img/PHP-Mysql.png"></a>
+        </div>
+        <div class="grid-20">
+          <a> <img class="" src="src/img/2000px-Nginx_logo.png"></a>
+        </div>
+        <div class="grid-20">
+          <a> <img class="" src="src/img/apach18x2601.png"></a>
+        </div>
+      </div>
+
+      <div class="partners__bottom">
+        <div class="grid-100 prefix-10">
+          <div class="grid-20">
+            <a> <img class="" src="src/img/CPanel_logo.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="" src="src/img/Intellogo.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="" src="src/img/google.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="" src="src/img/wicr.png"></a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="payment">
+    <div class="grid-container">
+      <span class="payment__accept">
+        <h4>
+          Мы принимаем
+        </h4>
+      </span>
+      <div class="payment__wallets">
+        <div class="grid-100">
+          <div class="grid-15">
+            <a> <img class="" src="src/img/visa.png"></a>
+          </div>
+          <div class="grid-10">
+            <a> <img class="" src="src/img/master.png"></a>
+          </div>
+          <div class="grid-15">
+            <a> <img class="" src="src/img/yandex.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="" src="src/img/webmoney.png"></a>
+          </div>
+          <div class="grid-15">
+            <a> <img class="" src="src/img/qivi.png"></a>
+          </div>
+          <div class="grid-15">
+            <a> <img class="" src="src/img/paypal.png"></a>
+          </div>
+        </div>
+      </div>
+      <a class="payment__show-all">
+        Показать все
+      </a>
+    </div>
+  </section>
+
+  <section class="recommendation">
+    <div class="grid-container">
+      <span class="recommendation__heading">
+        <h4>
+          Нас любят и рекомендуют
+        </h4>
+      </span>
+      <div class="recommendation__photo">
+        <div class="grid-100">
+          <div class="grid-20">
+            <a> <img class="recommendation__images" src="src/img/111.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="recommendation__images" src="src/img/222.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="recommendation__images" src="src/img/333.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="recommendation__images" src="src/img/444.png"></a>
+          </div>
+          <div class="grid-20">
+            <a> <img class="recommendation__images" src="src/img/555.png"></a>
+          </div>
+        </div>
+        <h5 class="recommendation__h5">
+          Солянник Роман
+        </h5>
+        <h6 class="recommendation__h6">
+          Руководитель проэкта freshview.ua
+        </h6>
+        <div class="grid-100">
+          <div class="grid-80 suffix-10 prefix-10">
+            <p class="recommendation__p">
+              Сайт рыбатекст поможет дизайнеру, верстальщику,вебмастеру сгенерировать несколько обзацевболее менее
+              осмысленного
+              <br>
+              текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних
+              условияхю
+              Сайт
+              <br>
+              рыбатекст поможет дизайнеру, верстальщику,вебмастеру сгенерировать несколько обзацевболее менее
+              осмысленного
+              <br>
+              текста рыбы на русском языке, а начинающему оратору отточить навык публичных выступлений в домашних
+              условиях.
+              <br>
+            </p>
+          </div>
+        </div>
+      </div>
+  </section>
+
+  <section class="building">
+    <div class="grid-container fluid">
+      <div class="grid-100">
+        <div class="grid-20">
+          <img class="building__computer" src="src/img/slider-image-1.png">
+
+
+          <img class="building__tool" src="src/img/slider-image-3.png">
+        </div>
+
+        <div class="grid-80">
+          <h3 class="building__name">
+            Начать строительство вашего сайта сегодня!
+          </h3>
+
+          <div class="grid-100">
+            <div class="grid-15">
+              <a class="features__services"> <img src="src/img/images1.png"> </a>
+              <span class="features__top features__top--color-white">
+                Безлимитный
+              </span>
+              <span class="features__bottom">
+                Жеский диск
+              </span>
+              </a>
+            </div>
+            <div class="grid-15">
+              <a class="unlimited__services"> <img src="src/img/images4.png"> </a>
+              <span class="features__top features__top--color-white">
+                Безлимитный
+              </span>
+              <span class="features__bottom">
+                Трафик
+              </span>
+              </a>
+            </div>
+            <div class="grid-15">
+              <a class="unlimited__services"> <img src="src/img/images5.png"> </a>
+              <span class="features__top features__top--color-white">
+                Безлимитное
+              </span>
+              <span class="features__bottom">
+                Количество сайтов
+              </span>
+              </a>
+            </div>
+            <div class="grid-20">
+              <div class="building__price">
+                <span class="building__ot"> ОТ </span>
+                <span class="building__r"> ₽ </span>
+                <span class="building__99"> 99 </span>
+                <span class="building__mes"> /мес </span>
+              </div>
+            </div>
+            <div class="grid-15">
+              <a href="#" class="building__link-button">
+                Заказать хостинг
+              </a>
+            </div>
+            <div class="grid-20">
+              <a href="#" class="building__link-button">
+                Заказать хостинг
+              </a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
